<resources>
    <string name="app_name">Changing Tables</string>
    <string name="title_map">Map</string>
    <string name="title_saved">Saved</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_yes">Yes</string>
    <string name="all_no">No</string>
    <string name="changing_table_out_of_service">Out of service</string>
    <string name="changing_table_unisex_toilet">Unisex toilet</string>
    <string name="changing_table_female_toilet">Female toilet</string>
    <string name="changing_table_male_toilet">Male toilet</string>
    <string name="changing_table_accessible_toilet">Accessible toilet</string>
    <string name="changing_table_other_place">Other room</string>
    <string name="changing_table_question">Is there a changing table here?</string>
    <string name="changing_table_location_question">Where is the changing table located?</string>
    <string name="business_name_label">Business name</string>
    <string name="add_business">Add business</string>
    <string name="business_add_prompt">Add a business here? Start with its name</string>
    <string name="business_type">Business type</string>
    <string name="filter">Filter</string>
    <string name="coffee">Coffee</string>
    <string name="restaurant">Restaurant</string>
    <string name="activity">Activity</string>
    <string name="amenity_changing_table">Changing table</string>
    <string name="amenity_clean">Clean</string>
    <string name="amenity_diaper_pail">Diaper pail</string>
    <string name="summary">Summary</string>
    <string name="all_back">Back</string>
    <string name="all_skip">Skip</string>
    <string name="drag_handle">Drag handle</string>
    <string name="amenity_out_of_service">%1$s (Out of service)</string>
</resources>