<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            mapbox:mapbox_cameraTargetLat="49.2665"
            mapbox:mapbox_cameraTargetLng="-123.1445"
            mapbox:mapbox_cameraZoom="10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/businessBottomSheet"
        android:visibility="gone"
        layout="@layout/business_bottom_sheet" />

    <LinearLayout
        android:id="@+id/filterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_local_activity_24"
            android:contentDescription="@string/activity" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_restaurant_24"
            android:contentDescription="@string/restaurant" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_coffee_24"
            android:contentDescription="@string/coffee" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_filter_list_24"
        android:contentDescription="@string/filter" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>