<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/business_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_material"
    app:behavior_fitToContents="false"
    app:behavior_halfExpandedRatio="0.5"
    app:behavior_hideable="true"
    app:behavior_peekHeight="240dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/business_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_material"
        android:gravity="center_vertical|start"
        android:paddingBottom="@dimen/margin_thin"
        android:text="@string/business_name_label"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drag_handle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_material"
        app:icon="@drawable/ic_bookmark_24dp"
        app:iconTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/business_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/business_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/business_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_thin"
        android:drawableStart="@drawable/coffee_green_24"
        android:drawablePadding="@dimen/margin_thin"
        android:drawableTint="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/business_type"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/business_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/changing_table_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_thin"
        android:drawableStart="@drawable/baby_changing_station_green_24"
        android:drawablePadding="@dimen/margin_thin"
        android:drawableTint="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:text="Your detailed business description goes here. It can be multiple lines long."
        android:textAppearance="?attr/textAppearanceBody1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/business_description" />

    <RatingBar
        android:id="@+id/business_rating"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressDrawable="@drawable/custom_rating_bar"
        android:rating="3"
        android:stepSize="1"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changing_table_description" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/amenities_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginTop="@dimen/margin_large"
        android:visibility="gone"
        app:cardBackgroundColor="@color/darkerContainerOrange"
        app:cardCornerRadius="@dimen/radius_large"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/business_rating">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amenities_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_thin"
                android:text="@string/summary"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/containerOrange" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amenity_changing_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_thin"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_thin"
                android:text="@string/amenity_changing_table"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/containerOrange" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amenity_clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_thin"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_thin"
                android:text="@string/amenity_clean"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/containerOrange" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amenity_diaper_pail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_thin"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_thin"
                android:text="@string/amenity_diaper_pail"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
